--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "@supabase/supabase-js": "^2.39.0",
     "@vimeo/player": "^2.20.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "typescript": "^5.3.2"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.3.2",
     "vite": "^6.2.0"
   }
 }
